# tractable

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt
tests/: helpers.py  test_connection.py  test_dict_iteration.py  test_map.py  test_pydantic_iteration.py  test_reduce.py  test_validation_alias.py
tractable/: __init__.py  connection_pool.py  range.py  spreadsheet.py
